--- a/mykanban/pubspec.yaml
+++ b/mykanban/pubspec.yaml
@@ -34,22 +34,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  isar: 3.1.0
-  isar_flutter_libs: 3.1.0
-  path_provider: 2.1.1
-  riverpod: 2.4.9
-  window_manager: 0.3.3
+  isar: 3.1.0+1
+  isar_flutter_libs: 3.1.0+1
+  path_provider: 2.1.5
+  riverpod: 2.6.1
+  window_manager: 0.5.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  very_good_analysis: ^9.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
