**FIX**: Fixed the gitignore
- *remove* README.md from gitignore.

--- a/mykanban/.gitignore
+++ b/mykanban/.gitignore
@@ -4,7 +4,6 @@
 *.pyc
 *.swp
 *.txt
-*.md
 .DS_Store
 .atom/
 .build/
@@ -14,6 +13,8 @@
 .swiftpm/
 migrate_working_dir/
 learning/
+flow_mermaid.md
+gantt_mermaid.md
 
 # IntelliJ related
 *.iml
