--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,19 +32,13 @@ dependencies:
   isar_flutter_libs: 3.1.0+1
   path_provider: 2.1.5
   riverpod: 2.6.1
-  window_manager: 0.5.0
+  window_manager: ^0.5.1
 
 dev_dependencies:
   flutter_lints: ^6.0.0
   flutter_test:
     sdk: flutter
   very_good_analysis: ^9.0.0
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
