--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.4.6+1
+version: 1.0.0+1
 
 environment:
   sdk: ^3.8.1
@@ -28,10 +28,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  isar: 3.1.0+1
-  isar_flutter_libs: 3.1.0+1
-  path_provider: 2.1.5
-  riverpod: 2.6.1
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
+  path_provider: ^2.1.5
+  riverpod: ^2.6.1
   window_manager: ^0.5.1
 
 dev_dependencies:
