--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
     "cmake.ignoreCMakeListsMissing": true,
     "workbench.colorTheme": "Visual Studio Dark",
+    "[dart]": {
+        "editor.formatOnSave": true
+    },
+    "editor.formatOnSave": true,
 }
