--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
     "[dart]": {
         "editor.formatOnSave": true
     },
-    "editor.formatOnSave": true,
+    "editor.formatOnSave": false,
 }
