--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,12 +67,36 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  
+  fonts:
+    - family: NotoSerif
+      fonts:
+        - asset: assets/fonts/NotoSerif_Condensed-Black.ttf
+          weight: 900
+        - asset: assets/fonts/NotoSerif_Condensed-SemiBold.ttf
+          weight: 600
+    - family: NotoSans
+      fonts:
+        - asset: assets/fonts/NotoSans_Condensed-Black.ttf
+          weight: 900
+        - asset: assets/fonts/NotoSans_Condensed-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/NotoSans_Condensed-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/NotoSans-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/NotoSans-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/NotoSans-Light.ttf
+          weight: 300
+        - asset: assets/fonts/NotoSans-ExtraLight.ttf
+          weight: 200
+        - asset: assets/fonts/NotoSans-ExtraLightItalic.ttf
+          weight: 200
+          style: italic
+        - asset: assets/fonts/NotoSans-Thin.ttf
+          weight: 100
+
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
