chore: Update flutter, dependencies and settings.
- *update* dependency versions in `pubspec.yaml` to
match `pubspec.lock`.
- *upgrade* `riverpod` to 3.0.0 and `very_good_analysis` to 10.0.0.
- *change* Dart SDK requirement to ">=3.9.0 <4.0.0".
- *modify* dependency URLs from "https://pub.dev" to
"https://pub.flutter-io.cn".
- *remove* and adjust specific settings in `.vscode/settings.json`.

(This message is generated automatically by *DeepSeek V3*)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,6 @@
 {
-    "cmake.ignoreCMakeListsMissing": true,
-    "workbench.colorTheme": "Visual Studio Dark",
     "[dart]": {
-        "editor.formatOnSave": true
+        "editor.formatOnSave": false,
     },
     "editor.formatOnSave": false,
 }
